<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">
<group android:checkableBehavior="single">

    <item android:title="@string/anasayfa"
          android:icon="@drawable/ic_home"
          android:id="@+id/home"/>

    <item android:id="@+id/water"
          android:icon="@drawable/ic_drink"
          android:title="@string/su_hat_rlat_c"/>

    <item android:id="@+id/eat"
          android:icon="@drawable/ic_eat"
          android:title="@string/yemekVakti"/>

    <item android:id="@+id/work"
          android:icon="@drawable/ic_work"
          android:title="@string/calısma"/>

    <item android:id="@+id/sport"
          android:icon="@drawable/ic_sports"
          android:title="@string/spor_hat_rlat_c"/>

    <item android:id="@+id/message"
          android:icon="@drawable/ic_message"
          android:title="@string/sevgiline_yaz"/>


</group>

    <item android:title="@string/hat_rlat_c_lar">

        <menu>
            <item android:id="@+id/dailyCalendar"
                  android:icon="@drawable/ic_calendar"
                  android:title="@string/gunluk_hatirlatici_olustur"/>

            <item android:id="@+id/weeklyCalendar"
                  android:icon="@drawable/ic_calendar"
                  android:title="@string/haftal_k_hatirlatici_olustur"/>

            <item android:id="@+id/monthlyCalendar"
                  android:icon="@drawable/ic_calendar"
                  android:title="@string/ayl_k_hatirlatici_olustur"/>

            <item android:id="@+id/yearlyCalendar"
                  android:icon="@drawable/ic_calendar"
                  android:title="@string/y_ll_k_hatirlatici_olustur"/>

        </menu>


    </item>

    <item android:title="@string/ayarlar"
          android:icon="@drawable/ic_settings"
          android:id="@+id/settings"/>



</menu>